# nixcon-2024-player-template

./: flake.nix  module.nix  pyproject.toml
garnix/: main.py
